# telegram-ai-post-generator

./: .env  .env.dev  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  idea.txt  pyproject.toml  pytest.ini
backend/: Dockerfile  Dockerfile.prod  entrypoint.sh  gunicorn_config.py  main.py  manage.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  connection.py  schema.py  state.py
backend/app/controllers/: __init__.py  chat.py  message.py  post.py
backend/app/models/: __init__.py  chat.py  message.py  post.py
backend/app/routes/: chat.py  message.py  post.py
backend/project/: __init__.py  config.py  extensions.py  utils.py
backend/project/api/: __init__.py  base.py  sd14.py
backend/project/models/: __init__.py  base.py  content.py  model.py  query.py  user.py
backend/project/models/content/: __init__.py  schema.py
backend/project/models/model/: __init__.py  schema.py
backend/project/models/query/: __init__.py  schema.py
backend/project/models/user/: __init__.py  schema.py
backend/project/nn/: __init__.py  base.py  sd14.py
backend/project/routes/: __init__.py  content.py  main.py  model.py  query.py  user.py
backend/project/services/: __init__.py  content.py  errrors.py  model.py  query.py  user.py
backend/project/static/: swagger.yml
backend/project/utils/: __init__.py  codes.py  common.py  error.py  format.py  http.py  paginate.py  status.py
frontend/: Dockerfile  package.json
nginx/: Dockerfile  nginx.conf
src/: __init__.py  env.py  routes.py  schemas.py
(+48 files in other folders)
