[tool.poetry]
name = "xbot-backend"
version = "0.1.0"
description = ""
authors = ["Oleh Toporkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
psycopg2-binary = "2.9.9"
uvicorn = "0.24.0.post1"
fastapi = "0.104.1"
sqlalchemy = "2.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
